feat: localize meta title and description for all languages

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,4 +1,8 @@
 {
+  "meta": {
+    "title": "OpenAI Garlic Modell - Der nächste Sprung in KI-Reasoning und Coding",
+    "description": "Umfassender Leitfaden zu OpenAIs gemunkeltem Garlic-Modell. Veröffentlichungsdatum, Spezifikationen, Vergleich mit Gemini 3.0 & Claude 4.5 und aktuelle Nachrichten."
+  },
   "nav": {
     "home": "Startseite",
     "reports": "Berichte",
