--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "meta": {
+    "title": "OpenAI Garlic Model - The Next Leap in AI Reasoning and Coding",
+    "description": "Comprehensive guide to OpenAI's rumored Garlic model. Release date, specs, comparison with Gemini 3.0 & Claude 4.5, and latest news."
+  },
   "nav": {
     "home": "Home",
     "reports": "Reports",
