--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,4 +1,8 @@
 {
+  "meta": {
+    "title": "Modelo OpenAI Garlic - El próximo salto en razonamiento y codificación de IA",
+    "description": "Guía completa sobre el rumoreado modelo Garlic de OpenAI. Fecha de lanzamiento, especificaciones, comparación con Gemini 3.0 y Claude 4.5, y últimas noticias."
+  },
   "nav": {
     "home": "Inicio",
     "reports": "Noticias",
