--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,4 +1,8 @@
 {
+  "meta": {
+    "title": "Modelo OpenAI Garlic - O próximo salto em raciocínio e codificação de IA",
+    "description": "Guia completo sobre o suposto modelo Garlic da OpenAI. Data de lançamento, especificações, comparação com Gemini 3.0 e Claude 4.5 e últimas notícias."
+  },
   "nav": {
     "home": "Início",
     "reports": "Notícias",
