--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,4 +1,8 @@
 {
+  "meta": {
+    "title": "Модель OpenAI Garlic - Следующий скачок в ИИ-рассуждениях и кодировании",
+    "description": "Полное руководство по предполагаемой модели Garlic от OpenAI. Дата выхода, характеристики, сравнение с Gemini 3.0 и Claude 4.5, а также последние новости."
+  },
   "nav": {
     "home": "Главная",
     "reports": "Новости",
