--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,4 +1,8 @@
 {
+  "meta": {
+    "title": "OpenAI Garlic 模型 - 人工智能推理和编码的又一次飞跃",
+    "description": "OpenAI Garlic 模型全方位指南。发布日期、规格参数、与 Gemini 3.0 和 Claude 4.5 的对比，以及最新消息。"
+  },
   "nav": {
     "home": "首页",
     "reports": "新闻报道",
